<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tyndall</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_main">Main</string>
	<string name="title_history">History</string>
	<string name="title_other">Other</string>
	<string name="title_music">Music</string>
	<string name="title_tcp">TCP</string>
	<string name="status_bar_notifications_happy">:-)</string>
	<string name="status_bar_notifications_happy_message">I am happy</string>
	<string name="status_bar_notifications_mood_title">Mood ring</string>
	
	
	
   
	<string name="menu_settings">Settings</string>     
	<string name="title_activity_main">MainActivity</string>             
	<string name="pref_send_report">Send crash reports</string>     
	<string name="pref_send_report_summary">Helps to fix bugs</string>     
	<string name="pref_sync_frequency">Sync frequency</string>     
	<string name="pref_sync_frequency_summary">Set the sync frequency</string>     
	<string name="pref_user_name">Set username</string>     
	<string name="pref_user_name_summary">Set your username</string>          
	 <string name="pref_user_profile">User Profile</string>    
	 <string name="pref_update_setting">Update Settings</string>
	 <string name="pref_connection">Connection settings</string> 
	 <string name="pref_nodes_connection">Nodes connected</string>     
	 <string name="pref_database">Nodes known</string>     
	 <string name="pref_database_summary">Database IP - IDNode</string> 
	 <string name="settings_label">Settings</string>         
	

</resources>
