<?xml version="1.0" encoding="utf-8"?> 
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_label"
    android:key="settings_key" >      

<PreferenceCategory android:title="@string/pref_user_profile" >    
	<EditTextPreference                 
	android:title="@string/pref_user_name"                 
	android:summary="@string/pref_user_name_summary"                 
	android:key="prefUsername"/>     
</PreferenceCategory>  

<PreferenceCategory android:title="@string/pref_connection" >          
	<ListPreference            
	android:key="prefNodesConnection"            
	android:title="@string/pref_nodes_connection"           
	android:entries="@array/syncFrequency"            
	android:entryValues="@array/syncFrequencyValues"            
	 />    
	 <ListPreference             
	android:key="prefDatabase"            
	android:title="@string/pref_database"   
	android:summary="@string/pref_database_summary"         
	android:entries="@array/syncFrequency"            
	android:entryValues="@array/syncFrequencyValues"            
	 />  
</PreferenceCategory> 
<PreferenceCategory 
    android:key="coucou"   
    android:title="coucou"
    android:layout="@layout/layout_settings" > 
 </PreferenceCategory> 


<PreferenceCategory android:title="@string/pref_update_setting" >         
    <CheckBoxPreference            
        android:defaultValue="false"           
        android:key="prefSendReport"            
		android:summary="@string/pref_send_report_summary"            
		android:title="@string/pref_send_report" >         
	</CheckBoxPreference>    
	<ListPreference            
	android:key="prefSyncFrequency"            
	android:entries="@array/syncFrequency"            
	android:summary="@string/pref_sync_frequency_summary"            
	android:entryValues="@array/syncFrequencyValues"            
	android:title="@string/pref_sync_frequency" />     
</PreferenceCategory>   




</PreferenceScreen> 

